--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -34,6 +34,8 @@
     <p>
       By signing-in you agree to the Amazon Clone's Conditions of Use & Privacy Notice.
     </p>
-
+    <a [routerLink]="['/register']">
+      <button class='login__registerButton'>Create your Amazon Account</button>
+    </a>
   </div>
 </div>
