--- a/frontend/src/app/test/test.component.html
+++ b/frontend/src/app/test/test.component.html
@@ -1,17 +1,16 @@
-<div class="wrap" [style.height]="itemHeigth+'px'">
-  <div #carousel>
-    <div #content class="item" [style.width]="3*itemsQuantity*itemWidth+'px'">
-      <ng-content></ng-content>
-    </div>
+<div style="width: 500px;">
+  <div style="display:flex; flex-direction: row; justify-content: space-between;margin-bottom:10px">
+    <img style = "object-fit: contain;width: 100px;margin-right:150px"src = "https://upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Amazon_logo.svg/1024px-Amazon_logo.svg.png">
+    <h2 style="font-weight: 300">Verify your new Amazon account</h2>
   </div>
-  <ng-content select=".prev-button"></ng-content>
-  <ng-content select=".next-button"></ng-content>
-  <ng-container *ngIf="showControls">
-    <div [style.line-height]="itemHeigth+'px'"  class="carousel_prev-button" (click)="prev()">
-      <a class="carousel-control-prev-icon"></a>
-    </div>
-    <div [style.line-height]="itemHeigth+'px'" class="carousel_next-button" (click)="next()">
-      <a class="carousel-control-next-icon"></a>
-    </div>
-  </ng-container>
+  <hr>
+  <div style="margin-top:10px;text-align: justify">
+    <p>To verify your email address, please use the following One Time Password (OTP):</p>
+    <br>
+    <h2>942929</h2>
+    <br>
+    <p>Do not share this OTP with anyone. Amazon takes your account security very seriously. Amazon Customer Service will never ask you to disclose or verify your Amazon password, OTP, credit card, or banking account number. If you receive a suspicious email with a link to update your account information, do not click on the link—instead, report the email to Amazon for investigation.</p>
+    <br>
+    <p>Thank you</p>
+  </div>
 </div>
