--- a/frontend/src/app/seller/seller-newproduct/seller-newproduct.component.html
+++ b/frontend/src/app/seller/seller-newproduct/seller-newproduct.component.html
@@ -1,1 +1,54 @@
-<p>seller-newproduct works!</p>
+<app-seller-header></app-seller-header>
+<div class="add-product">
+  <div class="add__container">
+    <h3>Select a product category</h3>
+    <h4>Choosing the best category ensures that you see the most appropriate data fields for your product. Choose search to find the best match.</h4>
+    <h4><b>Browse</b></h4>
+
+    <div class="header__search">
+      <div class="header__searchInput">
+        Select a category
+      </div>
+      <div class="header__searchIcon">
+        <mat-icon>search</mat-icon>
+      </div>
+    </div>
+
+    <div class="body__browser">
+      <div class="body__container">
+        <mat-icon>star_border</mat-icon>
+        <div class="header__browserInput">
+          Select a category
+        </div>
+        <div class="header__browseIcon">
+          <mat-icon>keyboard_arrow_right</mat-icon>
+        </div>
+      </div>
+      <div class="body__container">
+        <div class="header__browserInput">
+          Select a category
+        </div>
+        <div class="header__browseIcon">
+          <mat-icon>keyboard_arrow_right</mat-icon>
+        </div>
+      </div>
+      <div class="body__container">
+        <div class="header__browserInput">
+          Select a category
+        </div>
+        <div class="header__browseIcon">
+          <mat-icon>keyboard_arrow_right</mat-icon>
+        </div>
+      </div>
+      <div class="body__container">
+        <div class="header__browserInput">
+          Select a category
+        </div>
+        <div class="header__browseIcon">
+          <mat-icon>keyboard_arrow_right</mat-icon>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
