--- a/frontend/src/app/seller/seller-newproduct/seller-newproduct.component.css
+++ b/frontend/src/app/seller/seller-newproduct/seller-newproduct.component.css
@@ -98,8 +98,102 @@
   font-weight:600;
   color:#388E3C;
   background-color: white!important;
+}
+.product__info_container{
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  align-items: start;
+  margin-top: 10px;
+  background-color: white;
+  padding: 10px;
+}
+.product__basic_wrapper{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 100%;
 
 }
+:host ::ng-deep .ng-select{
+  min-width: 200px;
+  height: 25px!important;
+}
+::ng-deep .ng-select .ng-select-container {
+  min-height: 30px!important;
+  height: 30px!important;
+}
+.product_name{
+  display: flex;
+}
+.product_name p,
+.product_brand p,
+.product_cost p,
+.product_quantity p,
+.product_price p,
+.product__discount p{
+  align-self: center;
+  margin-right: 15px;
+}
+.product_brand,
+.product_quantity{
+  display: flex;
+}
+
+.product_price,
+.product__wrapper,
+.product_price_discount_wrapper,
+.product__discount,
+.product__discount_discount-start-end{
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.product_name > input,
+.product_cost > input,
+.product_quantity > input,
+.product_price > input,
+.product__discount > input{
+  width: 50px;
+  height: 25px;
+  border: 1px solid lightgray;
+  border-radius:5px;
+}
+.product_name > input{
+  width: 200px;
+}
+
+.product_description_wrapper{
+  display: flex;
+  width: 100%;
+  margin-top:20px;
+}
+.product_description_wrapper p{
+  margin-right: 10px;
+  background-color: white;
+}
+.product_price_discount_wrapper{
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.product__discount_discount-start-end{
+  display: flex;
+}
+
+.product__discount_discount-start-end p{
+  margin-right: 10px;
+}
+:host ::ng-deep .mat-form-field-appearance-fill .mat-form-field-flex{
+  padding:0!important;
+  background-color: white;
+}
+:host ::ng-deep .mat-form-field-type-mat-date-range-input .mat-form-field-infix, .mat-form-field-suffix .mat-icon-button{
+  background-color: white;
+}
+
 ::-webkit-scrollbar {
   width: 0px;
   height: 2px;
