--- a/frontend/src/app/seller/seller-newproduct/seller-newproduct.component.css
+++ b/frontend/src/app/seller/seller-newproduct/seller-newproduct.component.css
@@ -21,7 +21,7 @@
   display: flex;
   flex: 1;
   align-items: center;
-  margin-top: 10px;
+  margin-top: 20px;
   background-color: white;
 }
 
@@ -104,7 +104,7 @@
   flex-direction: column;
   flex: 1;
   align-items: start;
-  margin-top: 10px;
+  margin-top: 20px;
   background-color: white;
   padding: 10px;
 }
@@ -193,7 +193,87 @@
 :host ::ng-deep .mat-form-field-type-mat-date-range-input .mat-form-field-infix, .mat-form-field-suffix .mat-icon-button{
   background-color: white;
 }
+.product__image_wrapper{
+  background-color: white;
+  padding: 10px;
+  width: 100%;
+  margin-top: 20px;
+}
+.gallery{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 17vw);
+  grid-gap: 15px;
+}
+.gallery img{
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+}
+.gallery__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.hoverable{
+  position: relative;
+  display: block;
+  cursor: pointer;
+  border-radius: 10px;
+  max-height: 200px;
+  max-width: 200px;
+}
+.hoverable p{
+  text-align: center;
+  font-weight: bold;
+  color:#232f3e;
+}
+.hoverable .hover-text{
+  position: absolute;
+  display: none;
+  top: 50%;
+  left:  50%;
+  transform: translate(-50%,-50%);
+  z-index: 2;
+  background-color: #232f3e;
+  color:white;
+  border-radius: 5px;
+}
+.hoverable .background{
+  position: absolute;
+  display: none;
+  top: 0;
+  left:  0;
+  bottom: 0;
+  right: 0;
+  background-color:rgba(255, 255, 255, 0.5);
+  pointer-events: none;
+  border-radius: 10px;
+  z-index: 1;
+}
+.hoverable:hover .hover-text{
+  display: block;
+}
+.hoverable:hover .background{
+  display: block;
+}
+.fileInput{
+  display: none;
+}
 
+.save{
+  display:flex;
+  justify-content: flex-end;
+}
+.mat-raised-button{
+  background-color: #43A047;
+  color: #fff;
+}
+.cancel{
+  background-color: #eae9e9;
+  margin-right: 20px;
+  color:#232f3e
+}
 ::-webkit-scrollbar {
   width: 0px;
   height: 2px;
