--- a/frontend/src/app/header/header.component.css
+++ b/frontend/src/app/header/header.component.css
@@ -23,7 +23,6 @@
   display: flex;
   flex: 1;
   align-items: center;
-
 }
 
 .header__searchInput {
@@ -36,7 +35,11 @@
 .header__searchIcon {
   padding: 5px;
   height: 22px !important;
-  background-color: #cd9042;
+  background-color: #FF9900;
+}
+
+.header__searchIcon:hover{
+  cursor: pointer;
 }
 
 .header__optionLineOne {
@@ -70,4 +73,26 @@
   margin-left: 10px;
   margin-right: 10px;
   color: white;
+}
+
+.mat-select{
+  z-index: 1;
+  font-size: 10px;
+}
+
+.header__search_categories{
+  background-color: lightgray;
+}
+:host ::ng-deep .mat-select-placeholder{
+  color: #232f3e!important;
+}
+
+:host ::ng-deep .mat-form-field-appearance-fill .mat-form-field-flex{
+  padding: 0 !important
+}
+
+:host ::ng-deep .mat-form-field-infix{
+  border-top: 0 !important;
+  padding: 0!important;
+  width: 95px!important;
 }
