--- a/frontend/src/app/home/home.component.css
+++ b/frontend/src/app/home/home.component.css
@@ -13,7 +13,9 @@
   z-index: -1;
   mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
 }
-
+:host ::ng-deep .carousel{
+  z-index: -1;
+}
 .home__row {
   display: flex;
   z-index: 1;
