--- a/frontend/src/app/product/products/products.component.css
+++ b/frontend/src/app/product/products/products.component.css
@@ -40,6 +40,7 @@
   width: 12%;
   padding: 20px;
   border-right: 1px solid gray;
+  overflow: scroll;
 }
 .criterias-wrapper .bold{
   font-weight: 700;
@@ -86,4 +87,24 @@
 
 .products__search_result{
   width: 88%;
+  background-color: white;
+}
+
+/* pagination */
+.pagination{
+  background-color: white;
+  width: 100%;
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.pagination_wrapper{
+
+}
+.mat-raised-button{
+  border: 1px solid lightgray;
+  background: rgb(234, 237, 237);
+}
+.disabled{
+
 }
