--- a/frontend/src/app/product/search-result/search-result.component.css
+++ b/frontend/src/app/product/search-result/search-result.component.css
@@ -1,17 +1,50 @@
 .products__result{
   height: 100%;
-  padding: 20px 40px 20px 40px;
+  padding: 20px 40px 0px 40px;
   display: grid;
-  grid-gap: 40px;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  grid-auto-rows: 250px;
+  grid-gap: 60px;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-auto-rows: 450px;
+  background-color: white;
 }
 
-.product__container{
-  background-color: pink;
+.product__container:hover{
+  cursor: pointer;
+}
+.image_container{
+  width: 100%;
+  text-align: center;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 img{
-  width:60%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
+  object-fit:contain;
   display: block;
+}
+.text_container{
+  width: 100%;
+}
+
+.text_container p:hover{
+  color: #ff9900;
+}
+.title{
+  color:#0F1111;
+  font-weight: 400;
+  line-height: 24px;
+  font-size: 16px;
+}
+.price{
+  font-size: 21px;
+  line-height: 24px;
+}
+.discount{
+  font-size:13px;
+  color: #565959;
+  text-decoration: line-through;
+  margin-left: 10px;
 }
