--- a/frontend/src/app/header/header.component.css
+++ b/frontend/src/app/header/header.component.css
@@ -31,6 +31,11 @@
   border: none;
   width: 100%;
 }
+.header__searchInput:focus{
+  outline: rgb(228 121 17 / 50%);
+  border: 1px solid rgb(228 121 17 / 50%);
+  box-shadow: 0 0 3px 2px rgb(228 121 17 / 50%);
+}
 
 .header__searchIcon {
   padding: 5px;
