--- a/frontend/src/app/product/browsinghistory/browsinghistory.component.html
+++ b/frontend/src/app/product/browsinghistory/browsinghistory.component.html
@@ -1,6 +1,26 @@
 <div class="browsing_history_wrapper">
-  <p class="title">
-    Your browsing history
-  </p>
-  
+  <div class="browsing_history">
+    <p class="title">
+      Inspired by your browsing history
+    </p>
+    <div class="products_grid">
+      <div class="product_browsing_container">
+        <div class="image_container">
+          <img src="http://img6a.flixcart.com/image/sensor-security-system/f/f/y/pir-wireless-motion-sensor-four-switch-control-buildtrack-original-imaehdg6h6zajg7w.jpeg">
+        </div>
+        <p class="title_product">Blink Mini – Compact indoor plug-in smart security camera, 1080 HD video, night vision, motion detection, two-way audio</p>
+        <div class="stars">
+          <mat-icon class="staricon">star</mat-icon>
+          <mat-icon class="staricon">star</mat-icon>
+          <mat-icon class="staricon">star</mat-icon>
+          <mat-icon class="staricon">star</mat-icon>
+          <mat-icon class="staricon">star_border</mat-icon>
+          <p class="price_stars">54</p>
+        </div>
+        <p>$139.55</p>
+
+      </div>
+    </div>
+  </div>
+
 </div>
