--- a/frontend/src/app/product/products/products.component.css
+++ b/frontend/src/app/product/products/products.component.css
@@ -1,9 +1,14 @@
+.product_listing{
+  padding: 10px;
+  background-color: white;
+}
 .products-search{
   width: 100%;
   height: 100%;
   overflow: scroll;
   font-size: 14px;
   line-height: 20px;
+  margin-bottom: 30px;
 }
 
 .show-result{
@@ -72,6 +77,8 @@
 .staricon{
   color:#FF9900
 }
+
+
 
 .brandCheckbox-container{
   display: flex;
