--- a/frontend/src/app/product/browsinghistory/browsinghistory.component.css
+++ b/frontend/src/app/product/browsinghistory/browsinghistory.component.css
@@ -9,7 +9,8 @@
   display: grid;
   grid-gap: 60px;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  grid-auto-rows: 450px;
+  grid-auto-rows: 350px;
+  margin-top: 20px;
 }
 
 .image_container{
@@ -22,6 +23,7 @@
 }
 .title_product{
   color:#007185;
+  margin-top: 10px;
   font-size: 14px
 }
 img{
@@ -47,5 +49,20 @@ img{
   margin-left: 5px;
   margin-top: 1px;
   color:#007185;
+}
 
+hr{
+  margin-top:40px;
+  margin-bottom: 30px;
+}
+.your_browsing{
+  grid-gap: 15px;
+  grid-auto-rows: 200px;
+}
+a{
+  text-decoration: none;
+  color: black
+}
+a:hover{
+  cursor: pointer;
 }
