--- a/frontend/src/app/buy/cart/cart.component.html
+++ b/frontend/src/app/buy/cart/cart.component.html
@@ -2,10 +2,34 @@
 <div class="view-car-wrapper">
   <div class="cart_wrapper">
     <div class="shopping_cart">
+      <h2>Shopping Cart</h2>
+      <hr>
+      <div class="product_list_wrapper">
+        <img src="https://m.media-amazon.com/images/I/71eQUNgqioL._AC_AA220_.jpg">
+        <div>
+          <p>Samsung Galaxy A10e 32GB Unlocked Phone - BlackSamsung Galaxy A10e 32GB Unlocked Phone - Black</p>
+          <p>$ 173.31</p>
+          <h5>In Stock</h5>
+          <h5>Sold by Wireless Experts, Inc. and Fulfilled By Amazon.ca.<br>Eligible for FREE Shipping</h5>
+          <div class="mat_select_wrapper">
+            <mat-select>
+              <mat-option value="1">1</mat-option>
+              <mat-option value="1">1</mat-option>
+              <mat-option value="1">1</mat-option>
+              <mat-option value="1">1</mat-option>
+            </mat-select>
+            <hr>
+            <h5>Delete</h5>
+          </div>
+
+        </div>
+      </div>
 
     </div>
     <div class="subtotal">
-
+      <h5>Your order qualifies for FREE shipping (excludes remote locations). Choose this option at checkout. Details</h5>
+      <p>Subtotal(1 item): <span>$173.31</span></p>
+      <button mat-raised-button>Proceed to checkout</button>
     </div>
   </div>
 
