--- a/frontend/src/app/product-details/product-details.component.css
+++ b/frontend/src/app/product-details/product-details.component.css
@@ -24,6 +24,7 @@ h6{
 .product_details{
   width: 100%;
   height: 100%;
+  background-color: white;
 }
 .tree_product_wrapper{
   padding: 5px 20px 5px 20px;
@@ -184,4 +185,16 @@ h6{
 .buy-now{
   background-color: #FF9900;
   border-color: #FF9900;
+}
+
+.browsing_history{
+  padding: 20px;
+}
+
+:host ::ng-deep .mat-select{
+  padding: 5px 0 0 5px;
+}
+
+:host ::ng-deep .mat-select-placeholder{
+  color: #0F1111!important;
 }
