--- a/frontend/src/app/product-details/product-details.component.html
+++ b/frontend/src/app/product-details/product-details.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="product_details">
   <div class="tree_product_wrapper">
-    <a [routerLink]="['products?categoryId='+tree.id+'&pageIdx=0&perPage=40']" *ngFor="let tree of product.treeCategories">
+    <a [routerLink]="['/products']" [queryParams]="{categoryId:tree.id,pageIdx:'0',perPage:'40'}" *ngFor="let tree of product.treeCategories">
       <span *ngIf="product.treeCategories !== null">{{tree.name}}</span>
     </a>
   </div>
@@ -39,22 +39,25 @@
     </div>
 
     <div class="payment_wrapper">
-      <p class="price">$329.99</p>
+      <p class="price">{{product.price | currency}}</p>
       <p style="color: #007185;">FREE delivery: <span style="color:black;font-weight: 600">Monday, Aug 30</span></p>
       <p>Fastest delivery: <span style="font-weight: 600">Tomorrow</span></p>
       <h6>Deliver to Trang - Toronto M3M 2S5</h6>
       <p class="price stock">In Stock</p>
       <div class="quantity_wrapper">
         <p>Quantity</p>
-        <mat-select>
-          <mat-option value="1">1</mat-option>
-          <mat-option value="2">2</mat-option>
-          <mat-option value="3">3</mat-option>
+        <mat-select placeholder={{cart.quantity}}>
+          <mat-option value="1" [(ngModel)]="cart.quantity">1</mat-option>
+          <mat-option value="2" [(ngModel)]="cart.quantity">2</mat-option>
+          <mat-option value="3" [(ngModel)]="cart.quantity">3</mat-option>
         </mat-select>
       </div>
-      <button mat-raised-button class="add-cart">Add to cart</button>
-      <button mat-raised-button class="buy-now">Buy now</button>
+      <button mat-raised-button class="add-cart" (click)="addToCart()">Add to cart</button>
+      <button mat-raised-button class="buy-now" (click)="viewcart()">Buy now</button>
     </div>
-
+  </div>
+  <div class="browsing_history">
+    <hr>
+    <app-browsinghistory></app-browsinghistory>
   </div>
 </div>
